Fixed x overflow showing

--- a/portfolio-site/src/Components/Main Styles/main.scss
+++ b/portfolio-site/src/Components/Main Styles/main.scss
@@ -26,7 +26,7 @@ body.scroll-lock{
 
     @media screen and (min-width: $tablet-landscape-min-width) {
         // Ignore scroll lock when not on mobile
-        overflow: scroll;
+        overflow-y: scroll;
     }
 }
 
